# RanBot

./: .env.dev  .env.prod  .gitignore  README.md  boot.py  bot.py  bottest.py  pyproject.toml  pytest.py  requirements.txt  requirerments.txt  run.bat  setup.bat  setup.ps1  setup.py  update_all.bat  virtualshell.ps1
.github/workflows/: runtest.yml
libs/: __init__.py
libs/ext/bot/: __init__.py
libs/ran_utils/: commands.py  env.py  process_handle.py
ran_libs/ran_utils/: __init__.py  process_handle.py
script/: setup-nb.ps1
src/RanBot/plugins/ran_core/: __init__.py  consts.py
src/RanBot/plugins/ran_core/permission/: __init__.py
src/RanBot/plugins/ran_stds/: __init__.py
src/RanBot/plugins/ran_stds/dailysign/: __init__.py
src/RanBot/plugins/ran_stds/touhou/: __init__.py  divination.py  doujinstyle.py
src/RanLib/: __init__.py  config.py  consts.py  database.py  event.py  markdoven.py  router.py
src/plugins/ran_core/: __init__.py  auth.py  divination.py  doujinstyle.py  env.py  groupmanage.py  loghelper.py  music163.py  setu.py  touhou.py  utils.py
src/plugins/ran_core/API/: __init__.py  command.py
src/plugins/ran_core/setu/: __init__.py  setu_core.py
src/plugins/ran_core/setu/model/: __init__.py
src/plugins/ran_core/setu/setuapis/: __init__.py  lolicon.py  pixiv.py  yuban.py
src/plugins/ran_stds/: __init__.py  divination.py  doujinstyle.py  loghelper.py  music163.py
src/plugins/ran_stds/setu/: __init__.py  setu_core.py
src/plugins/ran_utils/: __init__.py  env.py  utils.py
src/resources/ran_core/: botdb.json
test/: test.py
(+3 files in other folders)
